fixed modal window

--- a/index.html
+++ b/index.html
@@ -493,8 +493,8 @@
               <input
                 class="subscribe-form-input"
                 type="email"
-                name="subscribe_user_email"
-                id="subscribe_user_email"
+                name="subscribe-user-email"
+                id="subscribe-user-email"
                 placeholder="E-mail"
                 required
               />
@@ -596,12 +596,12 @@
             <input
               class="review-form-checkbox visually-hidden"
               type="checkbox"
-              name="user-policy"
-              id="user-policy"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
               required
             />
-            <label class="review-form-checkbox-label" for="user-policy">
+            <label class="review-form-checkbox-label" for="user-privacy">
               <span class="review-form-own-checkbox">
                 <svg class="review-own-checkbox-icon" width="10" height="8">
                   <use href="./images/icons/icons.svg#icon-checkmark"></use>
